--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -159,20 +159,13 @@
       "name": "JSON से CSV",
       "description": "JSON डेटा को CSV प्रारूप में परिवर्तित करें",
       "placeholder": "कृपया JSON डेटा (ऑब्जेक्ट एरे या एकल ऑब्जेक्ट) दर्ज करें...",
-      "csv_placeholder": "कृपया CSV डेटा दर्ज करें (पहली पंक्ति हेडर के रूप में)...",
       "invalid": "अमान्य JSON प्रारूप",
-      "invalid_csv": "अमान्य CSV प्रारूप",
       "invalid_format": "कृपया मान्य JSON ऑब्जेक्ट या ऑब्जेक्ट एरे दर्ज करें",
       "input_title": "JSON इनपुट",
       "input_desc": "परिवर्तित करने के लिए JSON डेटा दर्ज करें",
-      "csv_input_title": "CSV इनपुट",
-      "csv_input_desc": "परिवर्तित करने के लिए CSV डेटा दर्ज करें",
       "output_title": "CSV आउटपुट",
       "output_desc": "परिवर्तित CSV डेटा",
-      "json_output_title": "JSON आउटपुट",
-      "json_output_desc": "परिवर्तित JSON डेटा",
       "output_placeholder": "परिवर्तित CSV यहां प्रदर्शित होगा...",
-      "json_output_placeholder": "परिवर्तित JSON यहां प्रदर्शित होगा...",
       "usage_title": "उपयोग निर्देश",
       "rows_columns": "{rows} पंक्तियां × {columns} स्तंभ",
       "usage_array_format": "• JSON ऑब्जेक्ट एरे प्रारूप का समर्थन करता है:",
@@ -183,39 +176,79 @@
       "usage_nested_examples": "user.name, user.address.city",
       "usage_array_stringify": "• एरे वैल्यूज को JSON स्ट्रिंग्स में परिवर्तित किया जाएगा",
       "usage_csv_escape": "• CSV विशेष वर्णों की एस्केपिंग को स्वचालित रूप से संभालता है",
-      "introduction": "JSON से CSV कनवर्टर एक पेशेवर डेटा फॉर्मेट रूपांतरण टूल है जो जटिल JSON डेटा स्ट्रक्चर को तुरंत मानक CSV फॉर्मेट में परिवर्तित कर सकता है। यह ऑब्जेक्ट एरेज़, नेस्टेड ऑब्जेक्ट फ्लैटनिंग प्रोसेसिंग का समर्थन करता है, स्मार्ट रूप से डेटा टाइप्स की पहचान करता है और फॉर्मेटेड आउटपुट करता है। चाहे यह डेटा एनालिसिस हो, रिपोर्ट जेनरेशन हो या डेटा माइग्रेशन हो, यह कुशल और सटीक समाधान प्रदान करता है।",
+      "introduction": "JSON से CSV कनवर्टर एक पेशेवर डेटा फॉर्मेट रूपांतरण टूल है जो JSON डेटा को तुरंत मानक CSV फॉर्मेट में परिवर्तित करता है। डेटा एक्सपोर्ट, रिपोर्ट जेनरेशन और Excel डेटा प्रोसेसिंग के लिए बिल्कुल सही।",
       "features": [
         "📊 JSON ऑब्जेक्ट एरे और सिंगल ऑब्जेक्ट कन्वर्शन का समर्थन",
-        "🔄 स्मार्ट नेस्टेड ऑब्जेक्ट फ्लैटनिंग प्रोसेसिंग",
-        "📋 स्वचालित CSV विशेष वर्ण एस्केपिंग और फॉर्मेटिंग",
-        "📈 रियल-टाइम रो और कॉलम सांख्यिकी प्रदर्शन",
+        "🔀 स्मार्ट नेस्टेड ऑब्जेक्ट फ्लैटनिंग",
+        "📋 स्वचालित CSV विशेष वर्ण एस्केपिंग",
         "💾 वन-क्लिक CSV फाइल डाउनलोड",
-        "🎯 जटिल डेटा स्ट्रक्चर पार्सिंग का समर्थन",
         "⚡ बड़े डेटासेट्स की हाई-परफॉर्मेंस प्रोसेसिंग",
-        "🔒 क्लाइंट-साइड प्रोसेसिंग, सुरक्षित और विश्वसनीय डेटा"
+        "🔒 क्लाइंट-साइड प्रोसेसिंग, सुरक्षित डेटा"
       ],
       "faq": [
         {
           "question": "कन्वर्शन के लिए कौन से JSON डेटा फॉर्मेट्स समर्थित हैं?",
-          "answer": "टूल दो मुख्य JSON फॉर्मेट्स का समर्थन करता है: ऑब्जेक्ट एरे फॉर्मेट (जैसे यूज़र लिस्ट्स, प्रोडक्ट डेटा) और सिंगल ऑब्जेक्ट फॉर्मेट। जटिल नेस्टेड स्ट्रक्चर्स के लिए, CSV फॉर्मेट संगतता सुनिश्चित करने के लिए स्वचालित फ्लैटनिंग प्रोसेसिंग की जाती है।"
+          "answer": "टूल दो मुख्य JSON फॉर्मेट्स का समर्थन करता है: ऑब्जेक्ट एरे फॉर्मेट और सिंगल ऑब्जेक्ट फॉर्मेट। जटिल नेस्टेड स्ट्रक्चर्स के लिए स्वचालित फ्लैटनिंग की जाती है।"
         },
         {
           "question": "नेस्टेड ऑब्जेक्ट्स और एरेज़ को कैसे हैंडल किया जाता है?",
-          "answer": "नेस्टेड ऑब्जेक्ट्स को स्वचालित रूप से कई कॉलम्स में फ्लैटन किया जाता है (जैसे user.name, user.address.city), और एरे वैल्यूज को JSON स्ट्रिंग फॉर्मेट में सेव किया जाता है। यह डेटा इंटग्रिटी बनाए रखता है और CSV फॉर्मेट मानकों को सुनिश्चित करता है।"
+          "answer": "नेस्टेड ऑब्जेक्ट्स को स्वचालित रूप से कई कॉलम्स में फ्लैटन किया जाता है और एरे वैल्यूज को JSON स्ट्रिंग में सेव किया जाता है।"
         },
         {
-          "question": "क्या कन्वर्ट की गई CSV फाइल को सीधे Excel में खोला जा सकता है?",
-          "answer": "हां, जेनरेट की गई CSV फाइल पूरी तरह से मानक फॉर्मेट के अनुपालन में है और Excel, Numbers, Google Sheets आदि स्प्रेडशीट सॉफ्टवेयर में सीधे खोली और एडिट की जा सकती है।"
-        },
-        {
-          "question": "बड़ी JSON फाइलों को प्रोसेस करते समय परफॉर्मेंस कैसी है?",
-          "answer": "टूल परफॉर्मेंस ऑप्टिमाइज़ेशन के साथ बनाया गया है और हज़ारों रिकॉर्ड्स वाली बड़ी JSON फाइलों को कुशलतापूर्वक प्रोसेस कर सकता है। सर्वोत्तम उपयोगकर्ता अनुभव सुनिश्चित करने के लिए हम सुझाते हैं कि एक बार में प्रोसेस किए जाने वाले डेटा की मात्रा 50MB से अधिक न हो।"
+          "question": "क्या कन्वर्ट की गई CSV फाइल को Excel में खोला जा सकता है?",
+          "answer": "हां, जेनरेट की गई CSV फाइल Excel, Numbers, Google Sheets में सीधे खोली जा सकती है।"
         }
       ],
       "meta": {
-        "title": "JSON से CSV कनवर्टर - मुफ्त ऑनलाइन कन्वर्ट करें",
-        "description": "तुरंत JSON को CSV प्रारूप में परिवर्तित करें। नेस्टेड ऑब्जेक्ट्स और एरेज़ को आसानी से संभालें। डाउनलोड और कॉपी सुविधाओं के साथ मुफ्त ऑनलाइन कनवर्टर।",
+        "title": "JSON से CSV कनवर्टर - मुफ्त ऑनलाइन",
+        "description": "तुरंत JSON को CSV में परिवर्तित करें। नेस्टेड ऑब्जेक्ट्स को आसानी से संभालें। मुफ्त ऑनलाइन कनवर्टर।",
         "keywords": "JSON से CSV, JSON कनवर्टर, CSV एक्सपोर्ट"
+      }
+    },
+    "csv-to-json": {
+      "name": "CSV से JSON",
+      "description": "CSV डेटा को JSON प्रारूप में परिवर्तित करें",
+      "placeholder": "कृपया CSV डेटा दर्ज करें (पहली पंक्ति हेडर के रूप में)...",
+      "invalid_csv": "अमान्य CSV प्रारूप",
+      "input_title": "CSV इनपुट",
+      "input_desc": "परिवर्तित करने के लिए CSV डेटा दर्ज करें",
+      "output_title": "JSON आउटपुट",
+      "output_desc": "परिवर्तित JSON डेटा",
+      "output_placeholder": "परिवर्तित JSON यहां प्रदर्शित होगा...",
+      "usage_title": "उपयोग निर्देश",
+      "usage_csv_format": "• पहली पंक्ति फील्ड नाम के रूप में",
+      "usage_auto_type": "• संख्या और बूलियन टाइप्स को स्वचालित रूप से पहचानता है",
+      "usage_nested_restore": "• डॉट-सेपरेटेड नेस्टेड ऑब्जेक्ट रिस्टोरेशन का समर्थन",
+      "usage_quoted_values": "• उद्धृत CSV मानों को स्वचालित रूप से संभालता है",
+      "usage_json_array": "• एरे फॉर्मेट सेल्स की पार्सिंग का समर्थन",
+      "introduction": "CSV से JSON कनवर्टर एक पेशेवर डेटा फॉर्मेट रूपांतरण टूल है जो CSV डेटा को तुरंत JSON में परिवर्तित करता है। डेटा इम्पोर्ट, API इंटीग्रेशन और डेटा एनालिसिस के लिए बिल्कुल सही।",
+      "features": [
+        "📊 CSV डेटा की स्मार्ट पार्सिंग",
+        "🔀 नेस्टेड ऑब्जेक्ट स्ट्रक्चर का स्वचालित रिस्टोरेशन",
+        "🎯 संख्या और बूलियन टाइप्स की स्मार्ट पहचान",
+        "📋 CSV उद्धरण और विशेष वर्णों को संभालता है",
+        "💾 वन-क्लिक JSON फाइल डाउनलोड",
+        "⚡ बड़े डेटासेट्स की हाई-परफॉर्मेंस प्रोसेसिंग",
+        "🔒 क्लाइंट-साइड प्रोसेसिंग, सुरक्षित डेटा"
+      ],
+      "faq": [
+        {
+          "question": "CSV डेटा किस फॉर्मेट में होना चाहिए?",
+          "answer": "CSV डेटा की पहली पंक्ति फील्ड नाम होनी चाहिए, उसके बाद डेटा पंक्तियां। मानक कॉमा सेपरेशन का समर्थन करता है।"
+        },
+        {
+          "question": "नेस्टेड ऑब्जेक्ट्स को कैसे रिस्टोर किया जाता है?",
+          "answer": "यदि CSV हेडर डॉट सेपरेशन का उपयोग करते हैं (जैसे user.name), टूल उन्हें स्वचालित रूप से नेस्टेड JSON में रिस्टोर करेगा।"
+        },
+        {
+          "question": "डेटा टाइप्स को कैसे पहचाना जाता है?",
+          "answer": "टूल संख्या, बूलियन और JSON एरेज़ को स्वचालित रूप से पहचानता है। यदि मान संख्या जैसा दिखता है तो इसे संख्या टाइप में परिवर्तित किया जाता है।"
+        }
+      ],
+      "meta": {
+        "title": "CSV से JSON कनवर्टर - मुफ्त ऑनलाइन",
+        "description": "तुरंत CSV को JSON में परिवर्तित करें। नेस्टेड ऑब्जेक्ट रिस्टोरेशन और स्मार्ट टाइप पहचान का समर्थन। मुफ्त ऑनलाइन कनवर्टर।",
+        "keywords": "CSV से JSON, CSV कनवर्टर, JSON इम्पोर्ट"
       }
     },
     "json-to-yaml": {
